# packages/contracts/openapi.json
@@ -500,6 +500,9 @@
                     "type": "string",
                     "minLength": 1,
                     "maxLength": 64
+                  },
+                  "withDemo": {
+                    "type": "boolean"
                   }
                 },
                 "required": [
@@ -551,10 +554,23 @@
                         "createdAt"
                       ],
                       "additionalProperties": false
+                    },
+                    "demoDashboardId": {
+                      "anyOf": [
+                        {
+                          "type": "string",
+                          "format": "uuid",
+                          "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
+                        },
+                        {
+                          "type": "null"
+                        }
+                      ]
                     }
                   },
                   "required": [
-                    "workspace"
+                    "workspace",
+                    "demoDashboardId"
                   ],
                   "additionalProperties": false
                 }
